// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip dark should match snapshot 1`] = `
<div
  className="dXjWID"
  direction="bottom"
/>
`;

exports[`Tooltip should match snapshot 1`] = `
<div
  className="czYnrP"
  direction="bottom"
/>
`;

exports[`Tooltip should match snapshot when visisble and direction is bottom 1`] = `
<div
  className="lmiBYD"
  direction="bottom"
/>
`;

exports[`Tooltip should match snapshot when visisble and direction is invalid 1`] = `
<div
  className="gQlopL"
  direction="invalid"
/>
`;

exports[`Tooltip should match snapshot when visisble and direction is left 1`] = `
<div
  className="kqjpuO"
  direction="left"
/>
`;

exports[`Tooltip should match snapshot when visisble and direction is right 1`] = `
<div
  className="iYyszT"
  direction="right"
/>
`;

exports[`Tooltip should match snapshot when visisble and direction is top 1`] = `
<div
  className="cAAEIl"
  direction="top"
/>
`;
